--- a/startup.css
+++ b/startup.css
@@ -57,3 +57,28 @@ img {
     font-weight: bold;
     text-transform: uppercase;
 }
+
+.feature-content {
+    padding: 8rem 0;
+    overflow: hidden;
+}
+
+.feature-content img {
+    margin-bottom: -8rem;
+}
+
+.feature-dark {
+    background: #262f36;
+    color: white;
+}
+
+.feature-dark h2 {
+    color: white;
+}
+
+@media screen and (min-width: 991px) {
+    .feature-content {
+        display: flex;
+        align-items: center;
+    }
+}
