need to make responsive

--- a/startup.css
+++ b/startup.css
@@ -76,9 +76,36 @@ img {
     color: white;
 }
 
+#feature-four .feature-content {
+    padding: 0;
+}
+
+#feature-five img {
+    margin-top : 2rem;
+}
+
+.feature-alt {
+    background: #f0f0f0;
+}
+
 @media screen and (min-width: 991px) {
     .feature-content {
         display: flex;
         align-items: center;
     }
+}
+
+#main-footer {
+    background: #262f36;
+    color: white;
+    padding: 6rem 0;
+    font-size: 0.8rem;
+}
+
+#main-footer h6 {
+    color: #718FA9;
+}
+
+#main-footer a {
+    color: #6C6F73;
 }
